# pure-intersection

./: ChangeLog.md  default.nix  pure-intersection-observer.cabal  pure-intersection.cabal
src/Pure/: Intersection.hs
