name:                pure-intersection
version:             0.8.0.0
synopsis:            IntersectionObserver API integration
homepage:            purehs.org/doc/pure-intersection
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-intersection.git

library
  exposed-modules:
    Pure.Intersection

  build-depends:       
      base
    , pure
    , pure-cond
    , pure-lifted
    , pure-json
    , pure-prop

  if impl(ghcjs)
    js-sources: js-sources/intersection-observer.js
    build-depends: ghcjs-base

  hs-source-dirs:      src
  default-language:    Haskell2010

